--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,17 @@
     text-decoration: none;
     }
 
+    .header {
+        background: #FFFFFF;
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+         0px 1px 1px rgba(46, 47, 66, 0.16), 
+         0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
+
+   
+    
+
+
     .logo {
     color: #2E2F42;
     font-weight: 800;
@@ -51,7 +62,7 @@
     color: #4D5AE5;
 }
 
-    .header-link {
+.header-link {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.5;
@@ -63,7 +74,6 @@
     .header-link:hover{
     color: #4D5AE5;
     }
-
 
     .address-link{
     font-weight: 400;
@@ -249,7 +259,7 @@ flex-grow: 0;
 /*--------------PORTFOLIO----------------*/
 
 
-    .filtres-btn {
+    .filtr-btn {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
