--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 .body {
-    font-family:'Roboto', sans-serif;
+    font-family:'Roboto','Raleway', sans-serif;
 }
 
 :root {
     --first-btn-color: #4D5AE5
-    --first-title-color: #FFFFFF;
+    
 }
 
 
@@ -47,7 +47,7 @@
     }
     .logo :hover,
     .logo :focus {
-    color: #4D5AE5;
+    color:var(--first-btn-color);
     }
 
 .web {
@@ -59,7 +59,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     cursor: pointer;
-    color: #4D5AE5;
+    color:var(--first-btn-color)
 }
 
 .header-link {
@@ -72,7 +72,7 @@
     }
     .header-link:focus,
     .header-link:hover{
-    color: #4D5AE5;
+    color:var(--first-btn-color);
     }
 
     .address-link{
@@ -86,7 +86,7 @@
 
     .address-link:hover,
     .address-link:focus {
-    color: #4D5AE5;
+    color:var(--first-btn-color);
     }
 
 
