--- a/css/styles.css
+++ b/css/styles.css
@@ -167,10 +167,16 @@ body {
 /*--------------OUR SKILLS----------------*/
 
 .hero {
+  background-image:linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+   url(../img/hero-bgf.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
   text-align: center;
-  background: var(--logo-title-color);
 }
 
 .hero-text {
@@ -276,7 +282,7 @@ body {
 
 .section-team {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 130px;
   background-color: var(--second-border-color);
 }
 
@@ -327,12 +333,117 @@ body {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
   color: var(--about-galtext);
+ 
+  
 }
+
+
+
+/*--------------icons----------------*/
+
+.team-soc-list {
+display: flex;
+justify-content: center;
+gap: 24px;
+padding-left:16px;
+padding-right: 16px;
+}
+
+.team-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.team-soc-item :hover,
+.team-soc-item :focus {
+  background-color:#404BBF 
+}
+
+
+
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color:var(--header-btn-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-soc-icon {
+  fill: var(--standart-white);
+}
+
+/*--------------Costumers-icons----------------*/
+
+.client-title {
+  padding-top: 130px;
+  margin-bottom: 72px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--logo-title-color);
+}
+
+.client-list {
+  justify-content: center;
+  display: flex;
+  gap: 24px;
+  padding-left: 156px;
+  padding-right: 156px;
+  padding-bottom: 120px;
+ 
+}
+
+.client-items {
+  width: 168px;
+  height: 88px;
+  
+}
+
+.client-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
+
+.client-icon {
+  width: 104px;
+  height: 56px;
+  }
+
+  .client-link:hover,
+  .client-link:focus {
+    border-color: #404BBF;
+  }
+
+
+  .client-link:focus  .client-icon,
+  .client-link:hover  .client-icon {
+    fill: #404BBF;
+  }
+
+
+
+
 
 /*--------------FOOTER----------------*/
 
 .footer {
+ gap: 120px ;
+  display: flex;
   padding-top: 100px;
   padding-bottom: 100px;
   background: var(--logo-title-color);
@@ -360,6 +471,63 @@ body {
   letter-spacing: 0.02em;
   color: var(--first-border-color);
 }
+
+
+/*--------------Footer-Icons----------------*/
+
+.footer-link {
+ 
+}
+
+
+.media {
+font-family: sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5px;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+margin-bottom: 16px;
+
+}
+
+
+.fot-list {
+  display: flex;
+  gap: 16px;
+}
+
+.fot-item {
+ width: 40px;
+ height: 40px;
+}
+
+
+.fot-link {
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fot-link:hover,
+.fot-link:focus {
+  background-color:#31D0AA ;
+  
+}
+
+  
+
+.fot-icon {
+  fill: var(--standart-white);
+}
+
+
+
+
 
 /*--------------PORTFOLIO----------------*/
 
